Enhance user management in RSpec tests, - Updated Api::V1::UsersController specs  - Refactored RSpec tests to ensure authentication is correctly applied for index, show, update, and destroy actions. - Added uth_helper method to generate authorization headers for tests
