# app/controllers/api/v1/users_controller.rb
@@ -1,0 +1,44 @@
+class Api::V1::UsersController < ApplicationController
+  before_action :set_user, only: %i[show update destroy]
+  before_action :authorize_admin, only: %i[index update destroy show]
+
+  # GET /users
+  def index
+    @users = User.all
+    render json: @users
+  end
+
+  # GET /users/:id
+  def show
+    render json: @user
+  end
+
+   # PATCH/PUT /users/:id
+   def update
+    if @user.update(user_update_params)
+      render json: @user
+    else
+      render json: @user.errors, status: :unprocessable_entity
+    end
+  end
+
+  # DELETE /users/:id
+  def destroy
+    @user.destroy
+    head :no_content
+  end
+
+  private
+
+  def set_user
+    @user = User.find(params[:id])
+  end
+
+  def user_update_params
+    params.require(:user).permit(:username, :email, :role)
+  end
+
+  def authorize_admin
+    render_unauthorized unless current_user&.admin?
+  end
+end
