# swagger/v1/swagger.yaml
@@ -117,3 +117,182 @@ paths:
                   error:
                     type: string
                     example: "Invalid credentials"
+  /api/v1/users:
+    get:
+      tags:
+        - Users
+      summary: List all users
+      description: Retrieve a list of all users.
+      security:
+        - JWTAuth: []
+      responses:
+        '200':
+          description: A list of users.
+          content:
+            application/json:
+              schema:
+                type: array
+                items:
+                  type: object
+                  properties:
+                    id:
+                      type: integer
+                    username:
+                      type: string
+                    email:
+                      type: string
+                    role:
+                      type: string
+                    created_at:
+                      type: string
+                      format: date-time
+                    updated_at:
+                      type: string
+                      format: date-time
+        '401':
+          description: Unauthorized access
+        '403':
+          description: Forbidden access
+
+  /api/v1/users/{id}:
+    get:
+      tags:
+        - Users
+      summary: Retrieve a user by ID
+      description: Retrieve a specific user by their ID.
+      parameters:
+        - name: id
+          in: path
+          required: true
+          description: ID of the user to retrieve.
+          schema:
+            type: integer
+      security:
+        - JWTAuth: []
+      responses:
+        '200':
+          description: Details of the specified user.
+          content:
+            application/json:
+              schema:
+                type: object
+                properties:
+                  id:
+                    type: integer
+                  username:
+                    type: string
+                  email:
+                    type: string
+                  role:
+                    type: string
+                  created_at:
+                    type: string
+                    format: date-time
+                  updated_at:
+                    type: string
+                    format: date-time
+        '404':
+          description: User not found.
+        '401':
+          description: Unauthorized access
+        '403':
+          description: Forbidden access
+
+    patch:
+      tags:
+        - Users
+      summary: Update a user by ID
+      description: Updates a user's details. Only admins can update user details.
+      security:
+        - JWTAuth: []
+      parameters:
+        - name: id
+          in: path
+          required: true
+          description: ID of the user to update
+          schema:
+            type: integer
+        - name: Authorization
+          in: header
+          required: true
+          description: JWT token for authorization
+          schema:
+            type: string
+            format: bearer
+      requestBody:
+        required: true
+        content:
+          application/json:
+            schema:
+              type: object
+              properties:
+                user:
+                  type: object
+                  properties:
+                    username:
+                      type: string
+                      example: "newUsername"
+                    email:
+                      type: string
+                      format: email
+                      example: "newemail@example.com"
+                    role:
+                      type: string
+                      enum: [member, admin]
+                      example: "admin"
+              required:
+                - user
+      responses:
+        '200':
+          description: User updated successfully.
+          content:
+            application/json:
+              schema:
+                type: object
+                properties:
+                  id:
+                    type: integer
+                  username:
+                    type: string
+                  email:
+                    type: string
+                  role:
+                    type: string
+                  created_at:
+                    type: string
+                    format: date-time
+                  updated_at:
+                    type: string
+                    format: date-time
+        '400':
+          description: Invalid request data.
+        '404':
+          description: User not found.
+        '401':
+          description: Unauthorized access
+        '403':
+          description: Forbidden access
+
+    delete:
+      tags:
+        - Users
+      summary: Delete a user by ID
+      description: Delete a specific user by their ID.
+      parameters:
+        - name: id
+          in: path
+          required: true
+          description: ID of the user to delete.
+          schema:
+            type: integer
+      security:
+        - JWTAuth: []
+      responses:
+        '204':
+          description: User deleted successfully.
+        '404':
+          description: User not found.
+        '401':
+          description: Unauthorized access
+        '403':
+          description: Forbidden access
